--- a/modules/admin_manual/pages/installation/quick_guides/ubuntu_20_04.adoc
+++ b/modules/admin_manual/pages/installation/quick_guides/ubuntu_20_04.adoc
@@ -268,7 +268,7 @@ sudo /bin/cat <<EOM >$FILE
 EOM
 ----
 
-==== Finalise the Installation
+==== Finalize the Installation
 
 Make sure the permissions are correct:
 
