--- a/modules/admin_manual/pages/configuration/general_topics/general_troubleshooting.adoc
+++ b/modules/admin_manual/pages/configuration/general_topics/general_troubleshooting.adoc
@@ -97,7 +97,7 @@ When you are finished reviewing your information you must delete `phpinfo.php`, 
 
 To retrieve your PHP version, run the following command:
 
-[source,console]
+[source,bash]
 ----
 php -v
 ----
@@ -116,7 +116,7 @@ Zend Engine v3.3.15, Copyright (c) 1998-2018 Zend Technologies
 
 To retrieve a list of PHP's active modules, run the following command.
 
-[source,console]
+[source,bash]
 ----
 php -m
 ----
@@ -185,10 +185,10 @@ directive to your Apache configuration, whether in the general Apache
 config, in a configuration include file, or in ownCloud’s .htaccess
 file.
 
+[source,apache]
 ----
 SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
 ----
-
 
 == Missing Data Directory
 
