--- a/modules/admin_manual/pages/configuration/server/occ_commands/app_commands/_password_policy_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/app_commands/_password_policy_commands.adoc
@@ -6,7 +6,7 @@ Command to expire a user or group of users’ passwords.
 
 == Command Description
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} user:expire-password <uid> [<expiredate>]
 ----
@@ -54,7 +54,7 @@ The password for frank is set to expire on 2018-07-12 13:15:28 UTC.
 
 == Command Examples
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 # The password for user "frank" will be set as being expired 24 hours before the command was run.
 {occ-command-example-prefix} user:expire-password -u frank
