--- a/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_background_jobs_selector.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_background_jobs_selector.adoc
@@ -13,7 +13,7 @@ background
 
 == Examples
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 # Set the background scheduler to Ajax
 {occ-command-example-prefix} background:ajax
