--- a/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_federation_sync_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_federation_sync_commands.adoc
@@ -5,7 +5,7 @@ Synchronize the address books of all federated ownCloud servers.
 Servers connected with federation shares can share user address books, and auto-complete usernames in share dialogs. 
 Use this command to synchronize federated servers:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} federation:sync-addressbooks
 ----
