--- a/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_files_external_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_files_external_commands.adoc
@@ -58,7 +58,7 @@ files_external:list [--show-password] [--full] [-a|--all] [-s|--short] [--] [<us
 
 === Example
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} files_external:list user_1 --short
 +----------+------------------+----------+
