--- a/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_group_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_group_commands.adoc
@@ -27,7 +27,7 @@ group:add groupname
 
 This example adds a new group, called "Finance":
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} group:add Finance
   Created group "Finance"
@@ -55,7 +55,7 @@ If you do not provide a search-pattern then all groups are listed.
 
 This example lists groups containing the string "finance".
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} group:list finance
  - All-Finance-Staff
@@ -65,7 +65,7 @@ This example lists groups containing the string "finance".
 
 This example lists groups containing the string "finance" formatted with `json_pretty`.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} group:list --output=json_pretty finance
  [
@@ -93,7 +93,7 @@ group:list-members [options] <group>
 
 This example lists members of the "Finance" group.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} group:list-members Finance
  - aaron: Aaron Smith
@@ -102,7 +102,7 @@ This example lists members of the "Finance" group.
 
 This example lists members of the Finance group formatted with `json_pretty`.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} group:list-members --output=json_pretty Finance
  {
@@ -123,7 +123,7 @@ group:add-member [-m|--member [MEMBER]] <group>
 
 This example adds members "aaron" and "julie" to group "Finance":
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} group:add-member --member aaron --member julie Finance
   User "aaron" added to group "Finance"
@@ -134,7 +134,7 @@ You may attempt to add members that are already in the group, without error.
 This allows you to add members in a scripted way without needing to know if the user is already a member of the group. 
 For example:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} group:add-member --member aaron --member julie --member fred Finance
   User "aaron" is already a member of group "Finance"
@@ -153,7 +153,7 @@ group:remove-member [-m|--member [MEMBER]] <group>
 
 This example removes members "aaron" and "julie" from group "Finance".
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} group:remove-member --member aaron --member julie Finance
   Member "aaron" removed from group "Finance"
@@ -164,7 +164,7 @@ You may attempt to remove members that have already been removed from the group,
 This allows you to remove members in a scripted way without needing to know if the user is still a member of the group. 
 For example:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} group:remove-member --member aaron --member fred Finance
   Member "aaron" could not be found in group "Finance"
@@ -175,7 +175,7 @@ For example:
 
 To delete a group, you use the `group:delete` command, as in the example below:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} group:delete Finance
 ----
