--- a/modules/admin_manual/pages/configuration/server/occ_commands/app_commands/_files_lifecycle.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/app_commands/_files_lifecycle.adoc
@@ -42,7 +42,7 @@ lifecycle
 
 Archive files which have reached a certain age.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} lifecycle:archive [options]
 ----
@@ -60,7 +60,7 @@ Archive files which have reached a certain age.
 
 Expire files from archive which have reached a certain age.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} lifecycle:expire [options]
 ----
@@ -78,7 +78,7 @@ Expire files from archive which have reached a certain age.
 
 Restore files from archive to the original location. Note that the location for archived files always follows the pattern `$userid/archive/files/...`
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} lifecycle:restore <path>
 ----
@@ -95,7 +95,7 @@ Restore files from archive to the original location. Note that the location for 
 
 Restore all files in folder `project1` for user alice with path `/work/projects/project1`
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} lifecycle:restore /alice/archive/files/work/projects/project1
 ----
@@ -104,7 +104,7 @@ Restore all files in folder `project1` for user alice with path `/work/projects/
 
 Restore all archived files for all users in the system back to their original locations. This command has no additional arguments or options.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} lifecycle:restore-all
 ----
@@ -116,7 +116,7 @@ Set upload time for files which do not have one.
 NOTE: Files without upload time are silently skipped by `occ lifecycle:archive`
 This can happen with files that were uploaded before the files_lifecycle app was configured or when it was temporarily disabled and therefore do not have an upload time set.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} lifecycle:set-upload-time [options] [--] <date>
 ----
@@ -148,7 +148,7 @@ The number of days since upload (or restore) after which files will be archived.
 
 The following example command sets the time passed since upload (or restore) for archiving files to 90 days.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} config:app:set files_lifecycle archive_period --value='90'
 ----
@@ -159,7 +159,7 @@ The number of days since archiving after which files will be permanently deleted
 
 The following example command sets the time passed to delete files to 180 days.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} config:app:set files_lifecycle expire_period --value='180'
 ----
@@ -170,7 +170,7 @@ Define groups of users that are exempt from the lifecycle policies (comma-separa
 
 The following example command specifies groups whose members will not be part of the lifecycle management.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} config:app:set files_lifecycle excluded_groups --value='group1,group2'
 ----
@@ -181,7 +181,7 @@ Set a policy who can restore files. Use the value `soft` for self-service and `h
 
 The following example command sets the restoration policy for users to `soft` (default).
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} config:app:set files_lifecycle policy --value='soft'
 ----
@@ -192,14 +192,14 @@ Disable the whole user interface for the File Lifecycle Management app.
 
 The following example command disables the user interface for the File Lifecycle Management app.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} config:app:set files_lifecycle disable_ui --value='yes'
 ----
 
 You can reenable it by deleting the key:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} config:app:delete files_lifecycle disable_ui
 ----
