--- a/modules/admin_manual/pages/configuration/server/occ_commands/app_commands/_wnd_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/app_commands/_wnd_commands.adoc
@@ -22,7 +22,7 @@ xref:enterprise/external_storage/windows-network-drive_configuration.adoc#wnd-no
 
 Listen to smb changes and store notifications for later processing in the database
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} wnd:listen [options] [--] <host> <share> <username> [<password>]
 ----
@@ -78,7 +78,7 @@ Listen to smb changes and store notifications for later processing in the databa
 
 Process the notifications stored by the `wnd:listen` command
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} wnd:process-queue [options] [--] <host> <share>
 ----
@@ -107,7 +107,7 @@ NOTE: This command is deprecated starting with ownCloud 10.8. All mount options 
  
 Sets the service account for the target mount point. You'll be asked for the password of the service account.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} wnd:set-service-account [options] [--] <mount-id>
 ----
