--- a/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_app_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_app_commands.adoc
@@ -17,7 +17,7 @@ app
 List all of your installed apps or optionally provide a search pattern to restrict the list of apps to those whose name matches the given regular expression. 
 The output shows whether they are enabled or disabled.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} app:list [--] [<search-pattern>]
 ----
@@ -51,7 +51,7 @@ If `SHIPPED` is set to `false`, only non-shipped apps will be listed.
 
 Enable an app, for example the Market app.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} app:enable market
 market enabled
@@ -59,7 +59,7 @@ market enabled
 
 == Disable an App
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} app:disable market
 market disabled
@@ -71,7 +71,7 @@ NOTE: Be aware that the following apps cannot be disabled: _DAV_, _FederatedFile
 By default all checks are enabled. 
 The Activity app is an example of a correctly-formatted app.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} app:check-code notifications
 App is compliant - awesome job!
@@ -79,7 +79,7 @@ App is compliant - awesome job!
 
 If your app has issues, you'll see output like this.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} app:check-code foo_app
 Analysing /var/www/owncloud/apps/files/foo_app.php
@@ -92,7 +92,7 @@ Analysing /var/www/owncloud/apps/files/foo_app.php
 
 You can get the full file path to an app.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} app:getpath notifications
 /var/www/owncloud/apps/notifications
