--- a/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_versions_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_versions_commands.adoc
@@ -8,7 +8,7 @@ These commands are not available in xref:maintenance-commands[single-user (maint
 `versions:cleanup` can delete all versioned files, as well as the
 `files_versions` folder, for either specific users, or for all users.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} versions:cleanup [<user_id>]...
 ----
@@ -22,7 +22,7 @@ Options
 
 The example below deletes all versioned files for all users:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} versions:cleanup
 Delete all versions
@@ -36,7 +36,7 @@ Delete versions for users on backend Database
 
 You can delete versions for specific users in a space-delimited list:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} versions:cleanup freda molly
 Delete versions of   freda
@@ -48,7 +48,7 @@ Delete versions of   molly
 `versions:expire` deletes only expired files according to the `versions_retention_obligation` setting in `config.php` (see the File versions section in config_sample_php_parameters). 
 The default is to delete expired files for all users, or you may list users in a space-delimited list.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} versions:expire [<user_id>]...
 ----
